force-app/main/default/objects/Form_Builder__Document_Comment__c/fields/Form_Builder__CLM_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__CLM_Comment_Id__c</fullName>
    <description>Unique CLM comment Id</description>
    <inlineHelpText>Unique CLM comment Id</inlineHelpText>
    <label>CLM Comment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>