force-app/main/default/objects/Form_Builder__Document_Comment__c/fields/Form_Builder__Comment__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Comment__c</fullName>
    <label>Comment</label>
    <length>50768</length>
    <type>LongTextArea</type>
</CustomField>