force-app/main/default/objects/Form_Builder__Document_Comment__c/fields/Form_Builder__Email__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>