force-app/main/default/objects/Form_Builder__Document_Comment__c/fields/Form_Builder__Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Name__c</fullName>
    <label>Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>