force-app/main/default/objects/Form_Builder__Document_Comment__c/fields/Form_Builder__Resolved__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>