force-app/main/default/objects/Form_Builder__Document_Comment__c/fields/Form_Builder__Titan_Sign_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Titan_Sign_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titan Sign Tracking</label>
    <referenceTo>Form_Builder__TItan_Sign_Tracking__c</referenceTo>
    <relationshipLabel>Document Comments</relationshipLabel>
    <relationshipName>Document_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>